// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Log 1`] = `
<DocumentFragment>
  <div
    class="react-lazylog-searchbar _3hsz3SFOTsWryCiRA9Mjtq"
  >
    <input
      autocomplete="off"
      class="react-lazylog-searchbar-input _2JObJsQyVcVoB1YD6078ip"
      disabled=""
      name="search"
      placeholder="Search"
      type="text"
      value=""
    />
    <button
      class="react-lazylog-searchbar-filter inactive qZaVIaYTJWY-GaoXJJ2Cp _3cXa-36GYrmnrGIXEg46cX"
      disabled=""
    >
      <svg
        class="_1lq6olr9h2p7MJDCA8c-aL"
        viewBox="0 0 286.054 286.054"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.939 44.696h178.784a8.931 8.931 0 0 0 8.939-8.939V8.939A8.937 8.937 0 0 0 187.723 0H8.939C4.005 0 0 4.005 0 8.939v26.818c0 4.934 4.005 8.939 8.939 8.939zm268.176 35.757H8.939C4.005 80.453 0 84.457 0 89.392v26.818a8.937 8.937 0 0 0 8.939 8.939h268.176a8.931 8.931 0 0 0 8.939-8.939V89.392a8.936 8.936 0 0 0-8.939-8.939zM8.939 205.601h178.784a8.931 8.931 0 0 0 8.939-8.939v-26.818a8.931 8.931 0 0 0-8.939-8.939H8.939A8.937 8.937 0 0 0 0 169.844v26.818a8.937 8.937 0 0 0 8.939 8.939zm268.176 35.757H8.939A8.937 8.937 0 0 0 0 250.297v26.818a8.937 8.937 0 0 0 8.939 8.939h268.176a8.931 8.931 0 0 0 8.939-8.939v-26.818a8.931 8.931 0 0 0-8.939-8.939z"
        />
      </svg>
    </button>
    <span
      class="react-lazylog-searchbar-matches inactive _3cXa-36GYrmnrGIXEg46cX"
    >
      0 matches
    </span>
  </div>
  <div
    style="overflow: visible; height: 0px; width: 0px;"
  >
    <div
      aria-label="grid"
      aria-readonly="true"
      class="ReactVirtualized__Grid ReactVirtualized__List react-lazylog _3NRgTLvWbyfWD-1xileYWR"
      role="grid"
      style="box-sizing: border-box; direction: ltr; height: -45px; position: relative; width: 0px; will-change: transform; overflow-x: hidden; overflow-y: auto;"
      tabindex="0"
    />
  </div>
  <div
    class="Log-logActions-3"
  >
    <span
      class="Log-logToolbarButton-8 Log-goToLineButton-9"
      title="Go to Line"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-textSizeSmall MuiButton-sizeSmall"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <svg
            class="mdi-icon "
            fill="currentColor"
            height="20"
            viewBox="0 0 24 24"
            width="20"
          >
            <path
              d="M4,17V9H2V7H6V17H4M22,15C22,16.11 21.1,17 20,17H16V15H20V13H18V11H20V9H16V7H20A2,2 0 0,1 22,9V10.5A1.5,1.5 0 0,1 20.5,12A1.5,1.5 0 0,1 22,13.5V15M14,15V17H8V13C8,11.89 8.9,11 10,11H12V9H8V7H12A2,2 0 0,1 14,9V11C14,12.11 13.1,13 12,13H10V15H14Z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </span>
    <span
      class=""
      title="Follow Log"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text Log-logToolbarButton-8 Log-followButtonFollowing-4 MuiButton-textSecondary MuiButton-textSizeSmall MuiButton-sizeSmall"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <svg
            class="mdi-icon Log-followLogIconFollowing-5"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M12,17L7,12H10V8H14V12H17L12,17M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2M12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4Z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </span>
  </div>
  <div
    class="MuiSpeedDial-root MuiSpeedDial-directionUp SpeedDial-speedDial-11 Log-logSpeedDial-7"
    role="presentation"
  >
    <button
      aria-controls="speed-dial-actions"
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="speed-dial"
      class="MuiButtonBase-root MuiFab-root MuiSpeedDial-fab MuiFab-secondary"
      style="transform: none; webkit-transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiFab-label"
      >
        <span
          class="MuiSpeedDialIcon-root"
        >
          <svg
            class="mdi-icon MuiSpeedDialIcon-openIcon"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
            />
          </svg>
          <svg
            class="mdi-icon MuiSpeedDialIcon-icon"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M12,16A2,2 0 0,1 14,18A2,2 0 0,1 12,20A2,2 0 0,1 10,18A2,2 0 0,1 12,16M12,10A2,2 0 0,1 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12A2,2 0 0,1 12,10M12,4A2,2 0 0,1 14,6A2,2 0 0,1 12,8A2,2 0 0,1 10,6A2,2 0 0,1 12,4Z"
            />
          </svg>
        </span>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <div
      aria-orientation="vertical"
      class="MuiSpeedDial-actions MuiSpeedDial-actionsClosed"
      id="speed-dial-actions"
      role="menu"
    >
      <span
        class="MuiSpeedDialAction-staticTooltip MuiSpeedDialAction-tooltipPlacementLeft MuiSpeedDialAction-staticTooltipClosed"
        id="speed-dial-action-0"
      >
        <span
          class="MuiSpeedDialAction-staticTooltipLabel SpeedDialAction-staticTooltipLabel-14"
          id="speed-dial-action-0-label"
          style="transition-delay: 30ms;"
        >
          Raw Log
        </span>
        <a
          aria-describedby="speed-dial-action-0-label"
          aria-disabled="false"
          class="MuiButtonBase-root MuiFab-root MuiSpeedDialAction-fab SpeedDialAction-icon-12 MuiSpeedDialAction-fabClosed MuiFab-sizeSmall"
          href="https://localhost:1234/logs/public/test.log"
          rel="noopener noreferrer"
          role="menuitem"
          style="transition-delay: 30ms;"
          tabindex="-1"
          target="_blank"
        >
          <span
            class="MuiFab-label"
          >
            <svg
              class="mdi-icon "
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
            >
              <path
                d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </span>
    </div>
  </div>
  <div
    class="resize-triggers"
  >
    <div
      class="expand-trigger"
    >
      <div
        style="width: 1px; height: 1px;"
      />
    </div>
    <div
      class="contract-trigger"
    />
  </div>
</DocumentFragment>
`;

exports[`should render without following 1`] = `
<DocumentFragment>
  <div
    class="react-lazylog-searchbar _3hsz3SFOTsWryCiRA9Mjtq"
  >
    <input
      autocomplete="off"
      class="react-lazylog-searchbar-input _2JObJsQyVcVoB1YD6078ip"
      disabled=""
      name="search"
      placeholder="Search"
      type="text"
      value=""
    />
    <button
      class="react-lazylog-searchbar-filter inactive qZaVIaYTJWY-GaoXJJ2Cp _3cXa-36GYrmnrGIXEg46cX"
      disabled=""
    >
      <svg
        class="_1lq6olr9h2p7MJDCA8c-aL"
        viewBox="0 0 286.054 286.054"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.939 44.696h178.784a8.931 8.931 0 0 0 8.939-8.939V8.939A8.937 8.937 0 0 0 187.723 0H8.939C4.005 0 0 4.005 0 8.939v26.818c0 4.934 4.005 8.939 8.939 8.939zm268.176 35.757H8.939C4.005 80.453 0 84.457 0 89.392v26.818a8.937 8.937 0 0 0 8.939 8.939h268.176a8.931 8.931 0 0 0 8.939-8.939V89.392a8.936 8.936 0 0 0-8.939-8.939zM8.939 205.601h178.784a8.931 8.931 0 0 0 8.939-8.939v-26.818a8.931 8.931 0 0 0-8.939-8.939H8.939A8.937 8.937 0 0 0 0 169.844v26.818a8.937 8.937 0 0 0 8.939 8.939zm268.176 35.757H8.939A8.937 8.937 0 0 0 0 250.297v26.818a8.937 8.937 0 0 0 8.939 8.939h268.176a8.931 8.931 0 0 0 8.939-8.939v-26.818a8.931 8.931 0 0 0-8.939-8.939z"
        />
      </svg>
    </button>
    <span
      class="react-lazylog-searchbar-matches inactive _3cXa-36GYrmnrGIXEg46cX"
    >
      0 matches
    </span>
  </div>
  <div
    style="overflow: visible; height: 0px; width: 0px;"
  >
    <div
      aria-label="grid"
      aria-readonly="true"
      class="ReactVirtualized__Grid ReactVirtualized__List react-lazylog _3NRgTLvWbyfWD-1xileYWR"
      role="grid"
      style="box-sizing: border-box; direction: ltr; height: -45px; position: relative; width: 0px; will-change: transform; overflow-x: hidden; overflow-y: auto;"
      tabindex="0"
    />
  </div>
  <div
    class="Log-logActions-17"
  >
    <span
      class="Log-logToolbarButton-22 Log-goToLineButton-23"
      title="Go to Line"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-textSizeSmall MuiButton-sizeSmall"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <svg
            class="mdi-icon "
            fill="currentColor"
            height="20"
            viewBox="0 0 24 24"
            width="20"
          >
            <path
              d="M4,17V9H2V7H6V17H4M22,15C22,16.11 21.1,17 20,17H16V15H20V13H18V11H20V9H16V7H20A2,2 0 0,1 22,9V10.5A1.5,1.5 0 0,1 20.5,12A1.5,1.5 0 0,1 22,13.5V15M14,15V17H8V13C8,11.89 8.9,11 10,11H12V9H8V7H12A2,2 0 0,1 14,9V11C14,12.11 13.1,13 12,13H10V15H14Z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </span>
    <span
      class=""
      title="Follow Log"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text Log-logToolbarButton-22 MuiButton-textSecondary MuiButton-textSizeSmall MuiButton-sizeSmall"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <svg
            class="mdi-icon "
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M12,17L7,12H10V8H14V12H17L12,17M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2M12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4Z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </span>
  </div>
  <div
    class="MuiSpeedDial-root MuiSpeedDial-directionUp SpeedDial-speedDial-25 Log-logSpeedDial-21"
    role="presentation"
  >
    <button
      aria-controls="speed-dial-actions"
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="speed-dial"
      class="MuiButtonBase-root MuiFab-root MuiSpeedDial-fab MuiFab-secondary"
      style="transform: none; webkit-transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiFab-label"
      >
        <span
          class="MuiSpeedDialIcon-root"
        >
          <svg
            class="mdi-icon MuiSpeedDialIcon-openIcon"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
            />
          </svg>
          <svg
            class="mdi-icon MuiSpeedDialIcon-icon"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M12,16A2,2 0 0,1 14,18A2,2 0 0,1 12,20A2,2 0 0,1 10,18A2,2 0 0,1 12,16M12,10A2,2 0 0,1 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12A2,2 0 0,1 12,10M12,4A2,2 0 0,1 14,6A2,2 0 0,1 12,8A2,2 0 0,1 10,6A2,2 0 0,1 12,4Z"
            />
          </svg>
        </span>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <div
      aria-orientation="vertical"
      class="MuiSpeedDial-actions MuiSpeedDial-actionsClosed"
      id="speed-dial-actions"
      role="menu"
    >
      <span
        class="MuiSpeedDialAction-staticTooltip MuiSpeedDialAction-tooltipPlacementLeft MuiSpeedDialAction-staticTooltipClosed"
        id="speed-dial-action-0"
      >
        <span
          class="MuiSpeedDialAction-staticTooltipLabel SpeedDialAction-staticTooltipLabel-28"
          id="speed-dial-action-0-label"
          style="transition-delay: 30ms;"
        >
          Raw Log
        </span>
        <a
          aria-describedby="speed-dial-action-0-label"
          aria-disabled="false"
          class="MuiButtonBase-root MuiFab-root MuiSpeedDialAction-fab SpeedDialAction-icon-26 MuiSpeedDialAction-fabClosed MuiFab-sizeSmall"
          href="https://localhost:1234/logs/public/test.log"
          rel="noopener noreferrer"
          role="menuitem"
          style="transition-delay: 30ms;"
          tabindex="-1"
          target="_blank"
        >
          <span
            class="MuiFab-label"
          >
            <svg
              class="mdi-icon "
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
            >
              <path
                d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </span>
    </div>
  </div>
  <div
    class="resize-triggers"
  >
    <div
      class="expand-trigger"
    >
      <div
        style="width: 1px; height: 1px;"
      />
    </div>
    <div
      class="contract-trigger"
    />
  </div>
</DocumentFragment>
`;
